--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .contentPage {
-  padding-top: 83px;
+  /* padding-top: 83px; */
   background-color: black;
   height: 100vh;
 }
