--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,4 @@
 <div class="contentPage">
-  <h1>Home</h1>
-
   <div class="wrapper">
     <!-- Hero-->
     <section class="module-cover parallax text-center fullscreen" data-background="assets/images/main/banner.jpg"
@@ -82,113 +80,14 @@
                   <div class="owl-item" style="width: 445.75px; margin-right: 30px;">
                     <div class="portfolio-item branding">
                       <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_1.jpg" alt=""></div>
+                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_1.jpg" alt="Não tem foto"></div>
                         <div class="portfolio-item-caption">
                           <h6 class="portfolio-item-title">Solave Cleanser</h6><span
                             class="portfolio-item-subtitle serif">Digital</span>
                         </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
                       </div>
                     </div>
-                  </div>
-                  <div class="owl-item" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item digital">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_2.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Monochrome</h6><span
-                            class="portfolio-item-subtitle serif">Branding</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item packaging">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_3.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Ellie Cashman</h6><span
-                            class="portfolio-item-subtitle serif">Packaging</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item branding">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_4.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Solave Cleanser</h6><span
-                            class="portfolio-item-subtitle serif">Digital</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item digital">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_5.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Monochrome</h6><span
-                            class="portfolio-item-subtitle serif">Branding</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item active" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item packaging">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_6.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Ellie Cashman</h6><span
-                            class="portfolio-item-subtitle serif">Packaging</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned active" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item branding">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_1.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Solave Cleanser</h6><span
-                            class="portfolio-item-subtitle serif">Digital</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned active" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item digital">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_2.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Monochrome</h6><span
-                            class="portfolio-item-subtitle serif">Branding</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item packaging">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_3.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Ellie Cashman</h6><span
-                            class="portfolio-item-subtitle serif">Packaging</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="owl-item cloned" style="width: 445.75px; margin-right: 30px;">
-                    <div class="portfolio-item branding">
-                      <div class="portfolio-item-wrapper">
-                        <div class="portfolio-item-img"><img src="assets/images/main/sitio_4.jpg" alt=""></div>
-                        <div class="portfolio-item-caption">
-                          <h6 class="portfolio-item-title">Solave Cleanser</h6><span
-                            class="portfolio-item-subtitle serif">Digital</span>
-                        </div><a class="portfolio-item-link" href="portfolio-single-1.html"></a>
-                      </div>
-                    </div>
-                  </div>
+                  </div>                  
                 </div>
               </div>
               <div class="owl-nav">
@@ -333,3 +232,18 @@
 
 
 </div>
+
+<style>.UkDRVdNr2PZBuea { color:#2e66ff !important; } 
+  .UkDRVdNr2PZBuea.ba-outline { outline-color:#2e66ff } 
+  .UkDRVdNr2PZBuea.K9cl6AOqchTps:hover, .UkDRVdNr2PZBuea.K9cl6AOqchTps.active { color:#295cdb !important; }
+  .EDxjWqRURcg001E { background-color:#2e66ff !important; }
+  .EDxjWqRURcg001E.K9cl6AOqchTps:hover, .EDxjWqRURcg001E.K9cl6AOqchTps.active { background:#295cdb !important; }
+  .ba-border-primary { border-color:#295cdb !important }
+  .Sd8sWEW7jjLEnbFWYE { background:#eb8f1e !important; color:white !important; }
+  .Sd8sWEW7jjLEnbFWYE.K9cl6AOqchTps:hover, .Sd8sWEW7jjLEnbFWYE.K9cl6AOqchTps.active { background:#ff9b21 !important; }
+  .ba-color-secondary { color:#eb8f1e !important;  }
+  .ba-color-secondary.K9cl6AOqchTps:hover, .ba-color-secondary.K9cl6AOqchTps.active { color:#ff9b21 !important; }
+  .ba-color-tertiary { color:#eb8f1e !important }
+  .ba-color-tertiary.K9cl6AOqchTps:hover, .ba-color-tertiary.K9cl6AOqchTps.active { color:#ff9b21 !important }
+  .iOjjcdVcIgDZWpHVW { background:#eb8f1e !important }
+  .ba-bg-tertiary.K9cl6AOqchTps:hover, .ba-bg-tertiary.K9cl6AOqchTps.active { background:#ff9b21 !important }</style>
