--- a/src/app/paginas/contato/contato.component.html
+++ b/src/app/paginas/contato/contato.component.html
@@ -2,7 +2,7 @@
   <!-- Hero-->
   <section class="secao-contato module-cover parallax text-center
       fullscreen" data-background="assets/images/main/banner_contato.jpg" data-overlay="0.6"
-    data-jarallax-original-styles="height: 300px !important; background-image: url(assets/images/main/banner_contato.jpg);">
+    data-jarallax-original-styles="height: 300px; background-image: url(assets/images/main/banner_contato.jpg);">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -12,12 +12,7 @@
       </div>
     </div>
     <div class="overlay-background" style="opacity: 0.6;"></div>
-    <div id="jarallax-container-0"
-      style="position: absolute; top: 0px; left: 0px; width: 100vh; height: 100vh; overflow: hidden; pointer-events: none; z-index: -100;">
-      <div
-        style="background-position: 50% 50%; background-size: cover; background-repeat: no-repeat; background-image: url(assets/images/main/banner_contato.jpg); position: fixed; top: 0px; left: 0px; width: 1903px; height: 682.2px; overflow: hidden; pointer-events: none; margin-top: 127.4px; transform: translate3d(0px, -156.2px, 0px);">
-      </div>
-    </div>
+    <div id="jarallax-container-0" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; pointer-events: none; z-index: -100;"><div style="background-position: 50% 50%; background-size: cover; background-repeat: no-repeat; background-image: url(&quot;http://associacaoclean.com.br/WebSitios/assets/images/main/banner_contato.jpg&quot;); position: fixed; top: 0px; left: 0px; width: 1903px; height: 682.2px; overflow: hidden; pointer-events: none; margin-top: 127.4px; transform: translate3d(0px, -127.4px, 0px);"></div></div>
   </section>
 
   <!-- Form-->
